--- a/_data/locales/fr.yml
+++ b/_data/locales/fr.yml
@@ -8,6 +8,7 @@ index:
   meet: "Rencontrez l'équipe et les collaborateurs"
   view: "DÉCOUVREZ NOS PROJECTS"
   funding: "PROJETS"
+  logo: "/assets/images/logos/SC_Logo_FR.png"
   accordions:
     - title: VILLE SONORE
       id: "home-accordion-1"
